--- a/css/style.css
+++ b/css/style.css
@@ -46,8 +46,6 @@ main {
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  /* DEBUG */
-  background-color: blue;
 }
 
 #cards-container {
@@ -55,13 +53,29 @@ main {
   width: 100%;
   display: flex;
   flex-wrap: wrap;
-  /* DEBUG */
-  background-color: red;
 }
 
 .card {
-  width: 30%;
+  min-width: 500px;
   height: 150px;
   margin: auto;
-  background-color: black;
+  background-color: rgb(0, 0, 0);
+  display: flex;
+}
+
+.card > img {
+  max-height: 100%;
+}
+
+.description {
+  width: 100%;
+  font-size: 1.5rem;
+  color: rgb(255, 255, 255);
+  margin: auto 30px;
+  display: flex;
+  flex-direction: column;
+}
+
+.description > * {
+  padding: 5px 0;
 }
