[feat/js] create function that prepares "teamMembers" properties for insertion into HTML

--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,7 @@ main {
 .card {
   min-width: 500px;
   height: 150px;
-  margin: auto;
+  margin: 10px auto;
   background-color: rgb(0, 0, 0);
   display: flex;
 }
@@ -78,4 +78,10 @@ main {
 
 .description > * {
   padding: 5px 0;
+}
+
+.email {
+  font-size: 1.2rem;
+  color: rgb(0, 94, 255);
+  text-decoration: none;
 }
